# bunkr-downloader

./: .gitignore  README.md  album_scraper.py  downloader.py  index.js  main.py  pyproject.toml  requirements.txt  scraper.py
src/bunkr_downloader/: main.py
src/bunkr_downloader/utils/: album_scraper.py  downloader.py
utils/: album_scraper.py  downloader.py  host_checker.py  scraper.py
