[project]
name = "bunkr-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "DebNation",email = "debiprasaddas@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "bunkr_downloader", from = "src"}]

[tool.poetry.scripts]
bunkr-downloader = "bunkr_downloader.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

